--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:sqlserver://localhost;database=bank
-spring.datasource.username=sa
+spring.datasource.url=jdbc:postgresql://localhost:5432/bank
+spring.datasource.username=postgres
 spring.datasource.password=${DS_PASSWORD}
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
